# wordstat-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: client.rs  create_report.rs  delete_report.rs  get_report.rs  lib.rs  region.rs  report_list.rs
