[package]
name = "wordstat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.9.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
mockall_double = "0.3.1"

[dev-dependencies]
futures = { version = "0.3.30", features = ["executor"] }
mockall = "0.12.1"
