[package]
name = "wordstat-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/huds2/wordstat-rs"
license = "MIT"
keywords= ["api", "yandex_direct", "wordstat", "trends", "search"]
categories = ["parsing", "api-bindings"]
description = "A library that allows easy interactions with Yandex Direct API for getting statistics about keyword searches from Wordstat service"
documentation = "https://docs.rs/wordstat-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.9.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
mockall_double = "0.3.1"

[dev-dependencies]
futures = { version = "0.3.30", features = ["executor"] }
mockall = "0.12.1"
